--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 wordcloud
 matplotlib
 seaborn
+pandas
 
 streamlit==1.10.0   # Use the latest version available or the one you're currently using
 gspread==5.3.2      # Use the latest version available or the one you're currently using
 google-auth==2.6.6  # Use the latest version available or the one you're currently using
-pandas==1.4.2       # Use the latest version available or the one you're currently using
