--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-wordcloud
-matplotlib
-seaborn
-pandas
-
-streamlit==1.10.0   # Use the latest version available or the one you're currently using
-gspread==5.3.2      # Use the latest version available or the one you're currently using
-google-auth==2.6.6  # Use the latest version available or the one you're currently using
+streamlit==1.10.0
+gspread==5.3.2
+google-auth==2.6.6
+pandas==1.4.2
+matplotlib==3.5.1
+seaborn==0.11.2
+wordcloud==1.8.1
