--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.10.0
-gspread==5.3.2
-google-auth==2.6.6
-pandas==1.4.2
-matplotlib==3.5.1
-seaborn==0.11.2
-wordcloud==1.8.1
+streamlit
+gspread
+google-auth
+pandas
+matplotlib
+seaborn
+wordcloud
